graph in alpine

--- a/src/site/_includes/components/graphScript.njk
+++ b/src/site/_includes/components/graphScript.njk
@@ -1,72 +1,65 @@
-<script src="https://cdn.jsdelivr.net/npm/petite-vue@0.4.1/dist/petite-vue.iife.min.js"></script>
 <script>
-    PetiteVue.createApp({
-    $delimiters: ["${", "}"],
-    graphData: null,
-    depth: 1,
-    graph: null,
-    fullGraph: null,
-    showFullGraph: false,
-    fullScreen: false,
+    async function fetchGraphData() {
+        const graphData = await fetch('/graph.json').then(res => res.json());
+        const fullGraphData  = filterFullGraphData(graphData);
+        return {graphData, fullGraphData}
+    }
 
-    toggleFullScreen() {
-        this.fullScreen = !this.fullScreen;
-        this.$nextTick(() => {
-            const el = document.querySelector('.graph');
-            this.graph.width(el.offsetWidth).height(el.offsetWidth);
-            setTimeout(() => {
-                this.graph.zoomToFit(5, 75);
-            }, 1);
-        })
-    },
+    function getNextLevelNeighbours(existing, remaining) {
+        const keys = Object.values(existing).map((n) => n.neighbors).flat();
+        const n_remaining = Object.keys(remaining).reduce((acc, key) => {
+                if (keys.indexOf(key) != -1) {
+                    if (!remaining[key].hide) {
+                        existing[key] = remaining[key];
+                    }
+                } else {
+                    acc[key] = remaining[key];
+                }
+                return acc;
+            }, {});
+        return existing, n_remaining;
+    }
 
-    getCssVar(variable) {return getComputedStyle(document.body).getPropertyValue(variable)},
-
-    htmlDecode(input) {
-        var doc = new DOMParser().parseFromString(input, "text/html");
-        return doc.documentElement.textContent;
-    },
-
-    get fullGraphData() {
-        if (this.graphData == null) {
+    function filterLocalGraphData(graphData, depth) {
+        if (graphData == null) {
             return null;
         }
-        const hiddens = Object.values(this.graphData.nodes).filter((n) => n.hide).map((n) => n.id);
-        const graphData = {
-            links: JSON.parse(JSON.stringify(this.graphData.links)).filter((l) => hiddens.indexOf(l.source) == -1 && hiddens.indexOf(l.target) == -1),
-            nodes: [...Object.values(this.graphData.nodes).filter((n) => !n.hide)]
+        let remaining = JSON.parse(JSON.stringify(graphData.nodes));
+        let links = JSON.parse(JSON.stringify(graphData.links));
+        let currentLink = decodeURI(window.location.pathname);
+        let currentNode = remaining[currentLink] || Object.values(remaining).find((v) => v.home);
+        delete remaining[currentNode.url];
+        if (!currentNode.home) {
+            let home = Object.values(remaining).find((v) => v.home);
+            delete remaining[home.url];
         }
-        return graphData;
-    },
-
-    renderFullGraph(toggle) {
-        this.showFullGraph = true;
-        this.$nextTick(() => {
-            lucide.createIcons({
-                attrs: {
-                    class: ["svg-icon"]
-                }
-            });
-            this.fullGraph = this.renderGraph(this.fullGraphData, "full-graph-container", 200);
-        })
-    },
-
-    renderLocalGraph(data) {
-        if (this.graph) {
-            this.graph._destructor();
+        currentNode.current = true;
+        let existing = {};
+        existing[currentNode.url] = currentNode;
+        for (let i = 0; i < depth; i++) {
+            existing, remaining = getNextLevelNeighbours(existing, remaining);
         }
-        this.graph = this.renderGraph(data, 'link-graph');
-    },
-
-    closefullGraph() {
-        if (this.fullGraph) {
-            this.fullGraph._destructor();
+        nodes = Object.values(existing);
+        if (!currentNode.home) {
+            nodes = nodes.filter(n => !n.home);
         }
-        this.fullGraph = null;
-        this.showFullGraph = false;
-    },
+        let ids = nodes.map((n) => n.id);
+        return {
+            nodes,
+            links: links.filter(function (con) {
+                return ids.indexOf(con.target) > -1 && ids.indexOf(con.source) > -1;
+            }),
+        }
+    }
 
-    renderGraph(graphData, id, delay) {
+    function getCssVar(variable) {return getComputedStyle(document.body).getPropertyValue(variable)}
+
+    function htmlDecode(input) {
+        var doc = new DOMParser().parseFromString(input, "text/html");
+        return doc.documentElement.textContent;
+    }
+
+    function renderGraph(graphData, id, delay, fullScreen) {
         if (graphData == null) {
             return;
         }
@@ -75,9 +68,9 @@
         height = el.offsetHeight;
         const highlightNodes = new Set();
         let hoverNode = null;
-        const color = this.getCssVar("--graph-main");
-        const mutedColor = this.getCssVar("--graph-muted");
-
+        const color = getCssVar("--graph-main");
+        const mutedColor = getCssVar("--graph-muted");
+        console.log(width, height);
         let Graph = ForceGraph()
         (el)
             .graphData(graphData)
@@ -128,7 +121,7 @@
                     ctx.stroke();
                 }
 
-                const label = this.htmlDecode(node.title)
+                const label = htmlDecode(node.title)
                 const fontSize = 3.5;
                 ctx.font = `${fontSize}px Sans-Serif`;
 
@@ -148,64 +141,74 @@
                 hoverNode = node || null;
                 
             });
-            if (this.fullScreen || (delay != null && graphData.nodes.length > 4)) {
+            if (fullScreen || (delay != null && graphData.nodes.length > 4)) {
                 setTimeout(() => {
                     Graph.zoomToFit(5, 75);
                 }, delay || 200);
             }
         return Graph;
-    },
+    }
 
-    fetchGraphData() {
-        fetch('/graph.json').then(res => res.json()).then(data => {
-            this.graphData = data;
-        });
-    },
-    getNextLevelNeighbours(existing, remaining) {
-        const keys = Object.values(existing).map((n) => n.neighbors).flat();
-        const n_remaining = Object.keys(remaining).reduce((acc, key) => {
-                if (keys.indexOf(key) != -1) {
-                    if (!remaining[key].hide) {
-                        existing[key] = remaining[key];
-                    }
-                } else {
-                    acc[key] = remaining[key];
-                }
-                return acc;
-            }, {});
-        return existing, n_remaining;
-    },
-    get localGraphData() {
-        if (this.graphData == null) {
+    function renderLocalGraph(graphData, depth, fullScreen) {
+        const data = filterLocalGraphData(graphData, depth);
+        return renderGraph(data, 'link-graph', null, fullScreen);
+    }
+
+    function filterFullGraphData(graphData) {
+        console.log(graphData);
+        if (graphData == null) {
             return null;
         }
-        let remaining = JSON.parse(JSON.stringify(this.graphData.nodes));
-        let links = JSON.parse(JSON.stringify(this.graphData.links));
-        let currentLink = decodeURI(window.location.pathname);
-        let currentNode = remaining[currentLink] || Object.values(remaining).find((v) => v.home);
-        delete remaining[currentNode.url];
-        if (!currentNode.home) {
-            let home = Object.values(remaining).find((v) => v.home);
-            delete remaining[home.url];
+        graphData = JSON.parse(JSON.stringify(graphData));
+        const hiddens = Object.values(graphData.nodes).filter((n) => n.hide).map((n) => n.id);
+        const data = {
+            links: JSON.parse(JSON.stringify(graphData.links)).filter((l) => hiddens.indexOf(l.source) == -1 && hiddens.indexOf(l.target) == -1),
+            nodes: [...Object.values(graphData.nodes).filter((n) => !n.hide)]
         }
-        currentNode.current = true;
-        let existing = {};
-        existing[currentNode.url] = currentNode;
-        for (let i = 0; i < this.depth; i++) {
-            existing, remaining = this.getNextLevelNeighbours(existing, remaining);
+        console.log(data);
+        return data
+    }
+
+    function openFullGraph(fullGraphData) {
+        lucide.createIcons({
+                attrs: {
+                    class: ["svg-icon"]
+                }
+            });
+        return renderGraph(fullGraphData, "full-graph-container", 200, false);;
+    }
+
+    function closefullGraph(fullGraph) {
+        if (fullGraph) {
+            fullGraph._destructor();
         }
-        nodes = Object.values(existing);
-        if (!currentNode.home) {
-            nodes = nodes.filter(n => !n.home);
-        }
-        let ids = nodes.map((n) => n.id);
-        let graphData = {
-            nodes,
-            links: links.filter(function (con) {
-                return ids.indexOf(con.target) > -1 && ids.indexOf(con.source) > -1;
-            }),
-        }
-        return graphData;
-    },
-  }).mount();
+        return null;
+    }
 </script>
+<div  x-init="{graphData, fullGraphData} = await fetchGraphData();" x-data="{ graphData: null, depth: 1, graph: null, fullGraph: null, showFullGraph: false, fullScreen: false, fullGraphData: null}" id="graph-component" x-bind:class="fullScreen ? 'graph graph-fs' : 'graph'" v-scope>
+    <div class="graph-title-container">
+        <div class="graph-title">Connected Pages</div>
+        <div id="graph-controls">
+                <div class="depth-control">
+                    <label for="graph-depth">Depth</label>
+                    <div class="slider">
+                            <input x-model.number="depth" name="graph-depth" list="depthmarkers" type="range" step="1" min="1" max="3" id="graph-depth"/>
+                    <datalist id="depthmarkers">
+                            <option value="1" label="1"></option>
+                            <option value="2" label="2"></option>
+                            <option value="3" label="3"></option>
+                    </datalist>
+                    </div>
+                    <span id="depth-display" x-text="depth"></span>
+                </div>
+                <div class="ctrl-right">
+                    <span id="global-graph-btn" x-on:click="showFullGraph = true; setTimeout(() => {fullGraph = openFullGraph(fullGraphData)}, 100)"><i  icon-name="globe" aria-hidden="true"></i></span>
+                    <span  id="graph-fs-btn"  x-on:click="fullScreen = !fullScreen"><i  icon-name="expand" aria-hidden="true"></i></span>
+                </div>
+        </div>
+    </div>
+    <div x-effect="graph = renderLocalGraph(graphData, depth, fullScreen)" id="link-graph" ></div>
+    <div x-show="showFullGraph" id="full-graph" class="show">
+        <span id="full-graph-close" x-on:click="fullGraph = closefullGraph(fullGraph); showFullGraph = false;"><i icon-name="x" aria-hidden="true"></i></span><div id="full-graph-container"></div>
+    </div>
+</div>
