--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -416,6 +416,20 @@ body {
                     display: none;
                 }
             }
+            tbody {
+                tr {
+                    position: relative;
+                    td {
+                        img.inset-cover {
+                            height: 70px;
+                            width: auto;
+                            position: absolute;
+                            top: 0px;
+                            right: 0px;
+                        }
+                    }
+                }
+            }
         }
     }
 
