--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -426,6 +426,7 @@ body {
                             position: absolute;
                             top: 0px;
                             right: 0px;
+                            padding: 0;
                         }
                     }
                 }
