fix: 🩹 fix css styles

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -398,6 +398,9 @@ body {
     }
 
     .cards {
+        table.dataview {
+            width: var(--table-width);
+        }
         th,
         td {
             border: none !important;
