--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -1,13 +1,18 @@
-body.theme-dark,
+body.theme-dark {
+    --text-accent: #006f8b;
+    --text-accent-hover: #0084a5;
+    --interactive-accent: #006f8b;
+    --h1-color: var(--interactive-accent);
+}
 body.theme-light {
-    --text-accent: #0097bd;
+    --text-accent: #004d61;
     --text-accent-hover: #006f8b;
-    --interactive-accent: #0097bd;
+    --interactive-accent: #004d61;
     --h1-color: var(--interactive-accent);
 }
 
 body {
-    --graph-main: var(--text-accent);
+    --graph-main: var(--text-accent-hover);
     --graph-muted: rgba(126, 126, 126, 0.5);
 
     .timestamps {
