feat: ✨ forest internal link detection

--- a/src/site/_includes/components/user/index/header/forest.njk
+++ b/src/site/_includes/components/user/index/header/forest.njk
@@ -8,7 +8,7 @@
                 <span></span>
             </span>
             {% else %}
-            <a class="tree" href="{{tree[1]}}" title="{{tree[2]}}">
+            <a class="internal-link tree" href="{{tree[1]}}" title="{{tree[2]}}">
                 <img src="/img/{{tree[0]}}.svg" alt="" style="width: auto;height: {{5 + (10 * tree[3])}}px;" />
             </a>
             {% endif %}
