--- a/src/site/_includes/components/user/common/footer/001-floatingControls.njk
+++ b/src/site/_includes/components/user/common/footer/001-floatingControls.njk
@@ -1,10 +1,12 @@
 <aside id="floating-control">
-    <a  id="emailme" href="mailto:connect@utsob.me?subject=Regarding {{title}}&body=Discussing {{meta.siteBaseUrl}}{{permalink}}"><i  icon-name="mail-plus" title="Discuss" aria-hidden="true"></i></a>
+    <a href="https://utsob.me" target="_blank" title="Home"><i  icon-name="castle" title="Home" aria-hidden="true"></i></a>
+    <a  href="https://github.com/uroybd/topobon" title="Source Code" target="_blank"><i  icon-name="github" title="GitHub" aria-hidden="true"></i></a>
     <span id="theme-switch">
         <i class="svg-icon light" icon-name="sun" aria-hidden="true"></i>
         <i class="svg-icon dark" icon-name="moon" aria-hidden="true"></i>
         <i class="svg-icon auto" icon-name="sun-moon" aria-hidden="true"></i>
     </span>
+    <a title="Start a Discussion" id="emailme" href="mailto:connect@utsob.me?subject=Regarding {{title}}&body=Discussing {{meta.siteBaseUrl}}{{permalink}}"><i  icon-name="mail-plus" title="Discuss" aria-hidden="true"></i></a>
 </aside>
 
     
