--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -649,3 +649,23 @@ body.backlinks-note-icon .backlink[data-note-icon="chest"]::before {
     }
   }
 }
+
+.tool-links {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100px;
+  font-size: 2rem;
+  border-radius: 10px;
+  border: var(--cards-border-width) solid var(--background-modifier-border);
+  background-color: var(--background-secondary);
+
+  .tool-link {
+    flex: 1;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+}
