feat(tools): description in tool pages

--- a/src/site/_includes/components/user/notes/beforeContent/001-tool-links.njk
+++ b/src/site/_includes/components/user/notes/beforeContent/001-tool-links.njk
@@ -1,4 +1,5 @@
 {% if noteIcon == "chest" %}
+<p style="font-style: italic">{{ description }}</p>
 <div class="tool-links">
 {% if deployment_link %}
 <div class="tool-link">
