fix: replace bookring code

--- a/src/site/_includes/components/user/sidebar/bottom/rings.njk
+++ b/src/site/_includes/components/user/sidebar/bottom/rings.njk
@@ -1,11 +1,11 @@
-    {% if tags and "gardenEntry" in tags %}
+{% if tags and "gardenEntry" in tags %}
 <div id="rings">
 <div class="toc-title-container">
 <div class="toc-title">Webrings</div>
 </div>
 <div class="rings-container">
 <div class = "ring-entry">
-<a href="https://webri.ng/webring/thebookring/previous?via=https://hermitage.utsob.me"><img src="https://i.imgur.com/sIR6aFP.gif" width="13" height="13"> </a><a href="https://library.marigold.town/"><img src="https://i.imgur.com/kZzmx1a.gif" width="88" height="31"></a><a href="https://webri.ng/webring/thebookring/next?via=https://hermitage.utsob.me"><img src="https://i.imgur.com/6ni3bTd.gif" width="13" height="13"></a>
+<div id='thebookring'> <script data-optimized="1" type="text/javascript" src="https://library.thecozy.cat/wp-content/litespeed/js/ae2da2a568a108306144ebb439cd5c5e.js?ver=4a1c1" defer data-deferred="1"></script> <script data-optimized="1" type="text/javascript" src="https://library.thecozy.cat/wp-content/litespeed/js/09d391355376c4817c4cedb18e90cccd.js?ver=0cccd" defer data-deferred="1"></script> </div>
 </div>
 </div>
 </div>
