fix: log height fix

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -16,6 +16,7 @@ body {
   --graph-main: var(--text-accent-hover);
   --graph-muted: rgba(126, 126, 126, 0.5);
   --dg-filetree-width: 350px;
+  --dg-filetree-logo-height: 120px;
 
   .timestamps {
     display: flex;
