feat: update book ring

--- a/src/site/_includes/components/user/sidebar/bottom/rings.njk
+++ b/src/site/_includes/components/user/sidebar/bottom/rings.njk
@@ -5,7 +5,10 @@
 </div>
 <div class="rings-container">
 <div class = "ring-entry">
-<div id='thebookring'> <script data-optimized="1" type="text/javascript" src="https://library.thecozy.cat/wp-content/litespeed/js/ae2da2a568a108306144ebb439cd5c5e.js?ver=4a1c1" defer data-deferred="1"></script> <script data-optimized="1" type="text/javascript" src="https://library.thecozy.cat/wp-content/litespeed/js/09d391355376c4817c4cedb18e90cccd.js?ver=0cccd" defer data-deferred="1"></script> </div>
+<div id='thebookring'>
+<script type="text/javascript" src="https://library.thecozy.cat/wp-content/onionring/onionring-variables.js?v=1.0"></script>
+<script type="text/javascript" src="https://library.thecozy.cat/wp-content/onionring/onionring-widget.js"></script>
+</div>
 </div>
 </div>
 </div>
