feat: webring styling

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -620,3 +620,17 @@ body.backlinks-note-icon .backlink[data-note-icon="chest"]::before {
 
   }
 }
+
+#thebookring {
+  td {
+    border: none !important;
+
+    a {
+      display: flex;
+    }
+  }
+
+  td.webring-prev {
+    justify-content: flex-end;
+  }
+}
