fix: fix styling

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -631,6 +631,8 @@ body.backlinks-note-icon .backlink[data-note-icon="chest"]::before {
   }
 
   td.webring-prev {
-    justify-content: flex-end;
+    a {
+      justify-content: flex-end;
+    }
   }
 }
