fix: filetree padding fix

--- a/src/site/styles/custom-style.scss
+++ b/src/site/styles/custom-style.scss
@@ -127,6 +127,7 @@ body {
     position: fixed;
     height: 100vh;
     background: var(--background-primary-alt);
+    padding-top: 5.5vh;
 
 
     .notelink {
